--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "chart.js": "^2.7.3",
-    "cypress": "^3.1.1",
-    "lodash": "latest",
+    "cypress": "^3.4.1",
+    "lodash": "^4.17.15",
     "react": "^16.6.0",
     "react-addons-test-utils": "^15.6.2",
     "react-chartjs-2": "^2.7.4",
